src/App.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background: #f4f4f4;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

  overflow-y: hidden; 
  overflow-x: hidden;
}

.App {
  text-align: center;
}

.floating-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 50px;
  height: 50px;
  background-color: #007bff;
  color: white;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  font-size: 24px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
  z-index: 1000;
}

iframe {
  border: none;
}

